# Engine

./: .clang-format  .gitignore  .gitmodules  Build.bat  BuildShaders.bat  BuildShaders.sh  CMakeLists.txt  README.md  Setup  Submoduleupdater.sh  TargetHelpers.cmake
Assets/Shaders/: BasicShader.vert  FlatInstanced.vert  FlatQuad.vert  FlatQuadBatched.frag  FlatQuadBatched.vert  ParticleShader.frag  ParticleShader.vert  vertexShader.vert
Assets/Shaders/output/: BasicShader.vert.spv  FlatInstanced.vert.spv  FlatQuad.vert.spv  FlatQuadBatched.frag.spv  FlatQuadBatched.vert.spv  ParticleShader.frag.spv  ParticleShader.vert.spv
Assets/Textures/: resize.py
EngineLib/: Engine.hpp
EngineLib/Application/: Application.cpp  Application.hpp
EngineLib/Audio/: Audio.hpp  AudioManager.cpp  AudioManager.hpp
EngineLib/Core/: Events.c  Events.h  Log.h  Math.h  Memory.h  STDTypes.h  Timer.hpp  Timestep.c  Timestep.h
EngineLib/GameObjects/Player/: PlayerPaddle.cpp  PlayerPaddle.h
EngineLib/Layer/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
EngineLib/LunaraEngine/: Engine.hpp
EngineLib/LunaraEngine/Application/: Application.cpp  Application.hpp
EngineLib/LunaraEngine/Audio/: AudioManager.cpp  AudioManager.hpp
EngineLib/LunaraEngine/Core/: CommonTypes.hpp  Events.cpp  Events.hpp  Memory.h
EngineLib/LunaraEngine/Layer/: Layer.hpp  LayerStack.cpp  LayerStack.hpp
EngineLib/LunaraEngine/Math/: Rect.h
EngineLib/LunaraEngine/Physics/: AABB.cpp  AABB.hpp  RectCollisions.cpp  RectCollisions.hpp
EngineLib/LunaraEngine/Renderer/: BatchRenderer.cpp  BatchRenderer.hpp  Camera.cpp  CommonTypes.hpp  Fonts.cpp  Fonts.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp  Renderer.inl  RendererAPI.cpp  RendererAPI.hpp  RendererCommands.hpp  Shader.cpp  Shader.hpp  TextureReader.cpp  TextureReader.hpp
EngineLib/LunaraEngine/Renderer/Buffer/: IndexBuffer.hpp  IndexBuffer.inl  StorageBuffer.hpp  StorageBuffer.inl  Texture.hpp  VertexBuffer.cpp
EngineLib/LunaraEngine/Renderer/Vulkan/: CommandBuffer.cpp  CommandPool.cpp  CommandPool.hpp  Common.cpp  LogicalDevice.cpp  LogicalDevice.hpp  Shader.cpp  Shader.hpp  SwapChain.cpp  VulkanDataTypes.hpp  VulkanDebugMessanger.cpp  VulkanDebugMessanger.hpp  VulkanInitialization.cpp  VulkanInitialization.hpp  VulkanRendererAPI.cpp  VulkanRendererCommands.cpp  VulkanRendererCommands.hpp
EngineLib/LunaraEngine/Renderer/Vulkan/Buffer/: Buffer.hpp  Buffer.inl  IndexBuffer.cpp  IndexBuffer.hpp  StagingBuffer.hpp  StorageBuffer.cpp  TextureBuffer.cpp  TextureBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp
EngineLib/LunaraEngine/Renderer/Vulkan/Pipeline/: Pipeline.cpp  Pipeline.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp
EngineLib/Math/: Color.h  Math.h  Rect.h
EngineLib/Physics/: AABB.cpp  AABB.hpp
EngineLib/Renderer/: BatchRenderer.cpp  BatchRenderer.hpp  Camera.cpp  Camera.hpp  CommonTypes.hpp  Fonts.c  Fonts.cpp  Fonts.h  Fonts.hpp  IndexBuffer.hpp  IndexBuffer.inl  ParticleSystem.cpp  ParticleSystem.hpp  Renderer.c  Renderer.c_deprecated  Renderer.cpp  Renderer.h  Renderer.hpp  Renderer.inl  RendererAPI.cpp  RendererAPI.hpp  RendererCommands.hpp  Shader.cpp  Shader.hpp  StorageBuffer.hpp  StorageBuffer.inl  Texture.c  Texture.cpp  Texture.h  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.hpp
EngineLib/Renderer/Buffer/: IndexBuffer.hpp  IndexBuffer.inl  StorageBuffer.hpp  StorageBuffer.inl  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp
EngineLib/Renderer/Vulkan/: Buffer.cpp  Buffer.hpp  Buffer.inl  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Common.cpp  Common.hpp  ComputePipeline.cpp  ComputePipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LogicalDevice.cpp  LogicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Queue.hpp  Shader.cpp  Shader.hpp  StagingBuffer.cpp  StagingBuffer.hpp  StorageBuffer.cpp  StorageBuffer.hpp  SwapChain.cpp  SwapChain.hpp  Synchronization.cpp  Synchronization.hpp  TextureBuffer.cpp  TextureBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VulkanDataTypes.hpp  VulkanDebugMessanger.cpp  VulkanInitialization.cpp  VulkanInitialization.hpp  (+4 more)
EngineLib/Renderer/Vulkan/Buffer/: Buffer.hpp  Buffer.inl  IndexBuffer.hpp  StagingBuffer.cpp  StagingBuffer.hpp  StorageBuffer.cpp  StorageBuffer.hpp  TextureBuffer.cpp  TextureBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
EngineLib/Renderer/Vulkan/Pipeline/: ComputePipeline.cpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Pipeline.cpp  Pipeline.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp
EngineLib/UserTypes/: UserTypes.hpp
GameObjects/Player/: PlayerPaddle.cpp  PlayerPaddle.h
Sandbox/: ParticleSystem.cpp  SandboxLayer.cpp  SandboxLayer.hpp  main.cpp
Sandbox/Assets/Shaders/: FlatQuad.vert  FlatQuadBatched.frag  FlatQuadBatched.vert  ParticleShader.frag  ParticleShader.vert
Sandbox/Assets/Shaders/output/: BasicShader.vert.spv  FlatInstanced.vert.spv  FlatQuadBatched.vert.spv  ParticleShader.frag.spv  ParticleShader.vert.spv
Sandbox/Assets/Textures/: extract.py
Sandbox/Entities/Coin/: Coin.cpp  Coin.hpp
Sandbox/Entities/Enemies/: Enemy.cpp  Enemy.hpp
Sandbox/Entities/Enemy/: Enemy.cpp  Enemy.hpp
Sandbox/Entities/Entity/: Entity.hpp
Sandbox/Entities/Player/: Player.cpp  Player.hpp
Sandbox/Player/: Player.cpp  Player.hpp
Sandbox/StaticEntities/: StaticEntity.cpp  StaticEntity.hpp  Wall.cpp  Wall.hpp
coverage_report/: index.html
coverage_report/coverage/home/krstoyanov/Projects/Engine/EngineLib/Application/: Application.cpp.html
coverage_report/coverage/home/krstoyanov/Projects/Engine/EngineLib/Audio/: AudioManager.cpp.html
coverage_report/coverage/home/krstoyanov/Projects/Engine/EngineLib/Core/: Events.c.html  Log.h.html  Timestep.c.html
scripts/: BuildShaders.py  BuildShaders.sh  SetupRenderdoc.sh  SetupSubmodules.py  SetupVulkan.py
tests/: UnitTests.cmake
tests/Engine/: ExampleTest.hpp
(+43 files in other folders)
